welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: value unary_! is not a member of Int
	if (noDoubles && die1==die2 && !die1==6)
                                       ^